// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add new item 1`] = `
Object {
  "items": Array [
    Object {
      "image": "",
      "name": "jain",
      "price": 28.78,
    },
  ],
}
`;

exports[`can add new item using OnSnapshot 1`] = `
Object {
  "items": Array [
    Object {
      "image": "",
      "name": "jain",
      "price": 28.78,
    },
  ],
}
`;

exports[`can add new item using OnSnapshot 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "vinamra",
        "price": 28.78,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "jain",
        "price": 28.78,
      },
    ],
  },
]
`;

exports[`can add new item using onPatch 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "",
      "name": "vinamra",
      "price": 28.78,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "jain",
  },
]
`;
